[package]
name = "lambda-attributes"
version = "0.1.0"
authors = ["David Barsky <dbarsky@amazon.com>"]
edition = "2018"

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0.5", features = ["full"] }
proc-macro2 = { version = "0.4.29", features = ["nightly"] }
quote = "0.6.12"
runtime = "0.3.0-alpha.5"
bytes = "0.4.12"

[dev-dependencies]
runtime = "0.3.0-alpha.5"
